# AI-Gently

./: .env.local  .gitignore  README.md  pyproject.toml
bedrock-agent/: main.py  pyproject.toml
docs/learning/: discover.md
src/tests/: test_mistral.py
