[project]
name = "ai-gently"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mistralai (>=1.12.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langchain-mistralai (>=1.1.1,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "rich (>=14.3.3,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
